$Id: History,v 1.34 2000-07-31 08:01:59 gracia Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
31 July 2000 Gonzalo Gracia
- Modifications required to compile on NT
  Operator string::[] requires size_t argument. 
  Cast from integer to size_t in several places in basic/src/G4UIArrayString.cc
  and G4VUIshell.cc

22 July 2000 Makoto Asai (interfaces-V02-00-00)
- Modify G4UIterminal, G4VUIshell, G4UIcsh and G4UItcsh to display the
  break status as a prompt characters.

25 June 2000 John Allison (interfaces-V01-01-06-old-G4UIterminal)
- As interfaces-V01-01-06 but old revisions of G4UIterminal.cc/hh.

23 June 2000 John Allison (interfaces-V01-01-06)
- Protected G4UIterminal, G4Ui[t]csh against access by index to null strings.

21 June 2000 John Allison (interfaces-V01-01-05)
- Added include $(G4INSTALL)/config/G4VIS_BUILD.gmk to common/GNUmakefile.

15 June 2000 John Allison (interfaces-V01-01-04)
- More ISO compliance for G4UIterminal class.

14 June 2000 Makoto Asai (interfaces-V01-01-03)
- ISO compliance for G4UItcsh classes

26 May 2000 Guy Barrand  (interfaces-V01-01-02)
- G4UIXm.hh, G4UIWin32.hh : change comments about /gui for the doc.

23 May 2000 John Allison (interfaces-V01-01-01-without-tcsh)