@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UItcsh.cc,v 1.4 2000-07-22 10:52:29 asaim Exp $
+// $Id: G4UItcsh.cc,v 1.5 2000-08-01 08:02:20 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -66,7 +66,7 @@ void G4UItcsh::MakePrompt(const char* msg)
   }
 
   promptString="";
-  G4int i;
+  size_t i;
   for(i=0; i<promptSetting.length()-1; i++){
     if(promptSetting[i]=='%'){
       switch (promptSetting[i+1]) {
@@ -129,7 +129,7 @@ void G4UItcsh::InsertCharacter(char cc)
 
   // display...
   G4cout << cc;
-  G4int i;
+  size_t i;
   for(i=cursorPosition-1; i<commandLine.length() ;i++) 
     G4cout << commandLine[i];
   for(i=cursorPosition-1; i<commandLine.length() ;i++)
@@ -156,7 +156,7 @@ void G4UItcsh::BackspaceCharacter()
     G4cout << AsciiBS << ' ' << AsciiBS << G4std::flush;
   } else { 
     G4cout << AsciiBS;
-    G4int i;
+    size_t i;
     for(i=cursorPosition-2; i< commandLine.length()-1 ;i++){
       G4cout << commandLine[i+1];
     }
@@ -180,7 +180,7 @@ void G4UItcsh::DeleteCharacter()
   if(IsCursorLast()) return;
 
   // display...
-  G4int i;
+  size_t i;
   for(i=cursorPosition-1; i< commandLine.length()-1 ;i++){
     G4cout << commandLine[i+1];
   }
@@ -247,7 +247,7 @@ void G4UItcsh::ForwardCursor()
 {
   if(IsCursorLast()) return;
 
-  G4cout << commandLine[cursorPosition-1] << G4std::flush;
+  G4cout << commandLine[(size_t)(cursorPosition-1)] << G4std::flush;
   cursorPosition++;
 }
 
@@ -276,7 +276,7 @@ void G4UItcsh::MoveCursorTop()
 void G4UItcsh::MoveCursorEnd()
 //////////////////////////////
 {
-  for(G4int i=cursorPosition-1; i<commandLine.length(); i++){
+  for(size_t i=cursorPosition-1; i<commandLine.length(); i++){
     G4cout << commandLine[i];
   }
   G4cout << G4std::flush;
@@ -346,7 +346,7 @@ void G4UItcsh::ListMatchedCommand()
     G4int len= input.length();
     G4int indx=-1;
     for(G4int i=len-1; i>=0; i--) {
-      if(input[i]=='/') {
+      if(input[(size_t)i]=='/') {
         indx= i;
         break;
       }   
@@ -597,7 +597,7 @@ G4String G4UItcsh::GetCommandLine(const char* msg)
 
   // update history...
   G4bool isMeaningfull= FALSE; // check NULL command
-  for (int i=0; i<newCommand.length(); i++) {
+  for (size_t i=0; i<newCommand.length(); i++) {
     if(newCommand[i] != ' ') {
       isMeaningfull= TRUE;
       break;
@@ -623,7 +623,7 @@ G4String G4UItcsh::GetFirstMatchedString(const G4String& str1,
   int nmin = nlen1<nlen2 ? nlen1 : nlen2;
 
   G4String strMatched;
-  for(int i=0; i<nmin; i++){
+  for(size_t i=0; i<nmin; i++){
     if(str1[i]==str2[i]) {
       strMatched+= str1[i];
     } else {
